Fix layout issue of pr clause without pr

--- a/apple_dict/wordshk.css
+++ b/apple_dict/wordshk.css
@@ -29,7 +29,7 @@ div.tags {
 	--dark: black;
 }
 
-.pr-clause {
+.pr-clause, .word-clause {
 	font-size: 200%;
 }
 
